makes color styles

--- a/src/pages/HomePage/Hero/Hero.module.scss
+++ b/src/pages/HomePage/Hero/Hero.module.scss
@@ -55,6 +55,7 @@
             position: absolute;
             top: -119px;
             z-index: 2;
+            pointer-events: none;
         }
     }
 
