makes benefits styles

--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -2,7 +2,7 @@
     width: 100%;
     padding: 0 24px;
     margin: 0 auto;
-    // outline: red dashed 3px;
+    outline: red dashed 3px;
 
     @media screen and (min-width: 420px) {
         max-width: 420px;
